# study-test-repo

./: Cargo.toml  build-all.sh  lib.rs
contracts/elc_aim/: Cargo.toml  lib.rs
contracts/lending/: Cargo.toml
contracts/loan/: Cargo.toml
contracts/shares/: Cargo.toml
contracts/stable_coin/: Cargo.toml
derive/: Cargo.toml
traits/: elc_aim.rs  mod.rs
